--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,5 +29,7 @@
     <string name="you_must_enter_password">You must enter a password to add products</string>
     <string name="enter">Enter</string>
     <string name="wrong_password">Wrong Password!</string>
+    <string name="you_must_choose_car_logo">You should choose a car logo</string>
+    <string name="you_should_give_informations">Please provide the requested informations</string>
 
 </resources>
